feat: 🎸 add new library for csv files handling
added the "Rap2hpoutre\FastExcel" library for excel and csv manipulation

--- a/Laravel/composer.json
+++ b/Laravel/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "rap2hpoutre/fast-excel": "^5.2",
         "symfony/http-client": "^6.0"
     },
     "require-dev": {
